--- a/MeetingRoomReservationSystem/WebContent/resources/css/style.css
+++ b/MeetingRoomReservationSystem/WebContent/resources/css/style.css
@@ -13,9 +13,9 @@ table {
  
 th {
 	border-bottom:1px solid gray;
-	background:none repeat scroll 0 0 #09c332;
+	background:none repeat scroll 0 0  #30d5c8;
 	padding:10px;
-	color: #FFFFFF;
+	color: #ffffff;
 }
 
 tr {
@@ -24,10 +24,10 @@ tr {
 }
  
 tr:nth-child(even) {background: #FFFFFF}
-tr:nth-child(odd) {background: #BBBBBB}	
+tr:nth-child(odd) {background: #e2e2e2}	
  
 #wrapper {width: 100%; margin-top: 0px; }
-#header {width: 70%; background: #09c332; margin-top: 0px; padding:15px 0px 15px 15px;}
+#header {width: 70%; background:  #30d5c8; margin-top: 0px; padding:15px 0px 15px 15px;}
 #header h2 {width: 100%; margin:auto; color: #FFFFFF;}
 #container {width: 100%; margin:auto}
 #container h3 {color: #000;}
